<resources>
    <string name="app_name">Event Manager</string>
    <string name="add_event">Добавить мероприятие</string>
    <string name="name_hint">Название</string>
    <string name="description_hint">Описание</string>
    <string name="date_hint">Дата гггг-мм-дд</string>
    <string name="temperature_hint">Погода</string>
    <string name="save_btn">Сохранить</string>
    <string name="error_input_name">Заполните название</string>
    <string name="error_input_date">Введите корректную дату</string>
    <string name="error_input_city">Заполните место проведения</string>
    <string name="success">Мероприятие записано</string>
    <string name="no_temperature_data">Нет данных о температуре</string>
    <string name="city_hint">Место проведения</string>
    <string name="current_city">Текущее место проведения</string>
    <string name="new_city">Выберите новое место проведения</string>
    <string name="choose_city">Выберите место проведения</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>